--- a/sass/main.scss
+++ b/sass/main.scss
@@ -16,3 +16,5 @@
 @import "./blocks/objects.scss";
 @import "./blocks/tittle.scss";
 @import "./blocks/img-card.scss";
+@import "./blocks/card-info.scss";
+@import "./blocks/cta.scss";
