--- a/css/main.css
+++ b/css/main.css
@@ -1,94 +1,83 @@
 html, body {
   font-family: 'Poppins', sans-serif;
   font-size: 16px;
-  color: #323232;
-}
+  color: #323232; }
 
 .container {
   max-width: 1140px;
   margin-left: auto;
   margin-right: auto;
   padding-left: 15px;
-  padding-right: 15px;
-}
+  padding-right: 15px; }
+
+.container-fluid {
+  width: 100%; }
 
 * {
   box-sizing: border-box;
   margin: 0;
-  padding: 0;
-}
+  padding: 0; }
 
 h1, h2, h3, h4, h5, h5 p {
-  font-size: inherit;
-}
+  font-size: inherit; }
 
 a {
   color: inherit;
-  text-decoration: none;
-}
+  text-decoration: none; }
 
 input, button {
   font-size: inherit;
   font-family: inherit;
-  border: none;
-}
+  border: none; }
 
 button, input[type="submit"] {
   background: none;
   cursor: pointer;
-  font-size: inherit;
-}
+  font-size: inherit; }
 
 input:focus, button:focus {
-  outline: none;
-}
+  outline: none; }
 
 ul, li {
-  list-style: none;
-}
+  list-style: none; }
+
+img {
+  display: block;
+  max-width: 100%; }
 
 .nav {
   padding-top: 35px;
-  padding-bottom: 35px;
-}
+  padding-bottom: 35px; }
 
 .nav__row {
   display: flex;
   justify-content: space-between;
-  align-items: center;
-}
+  align-items: center; }
 
 .logo {
   display: flex;
   align-items: center;
   font-size: 24px;
   font-weight: 700;
-  line-height: 1;
-}
+  line-height: 1; }
 
 .navigation-list ul {
-  display: flex;
-}
+  display: flex; }
 .navigation-list li:not(:last-child) {
-  margin-right: 42px;
-}
+  margin-right: 42px; }
 .navigation-list a:hover {
-  color: #f78434;
-}
+  color: #f78434; }
 .navigation-list a.active {
   color: #f78434;
-  font-weight: 700;
-}
+  font-weight: 700; }
 
 .header__row {
   display: flex;
   align-items: center;
-  justify-content: space-between;
-}
+  justify-content: space-between; }
 
 .header__text {
-  width: 465px;
-}
+  width: 465px; }
 
 .header_tittle {
   margin-bottom: 25px;
@@ -97,32 +86,26 @@ ul, li {
   line-height: 1.46;
   margin-right: -160px;
   z-index: 9;
-  position: relative;
-}
+  position: relative; }
 
 .header__text p {
   line-height: 1.6875;
-  margin-bottom: 1em;
-}
+  margin-bottom: 1em; }
 
 .header_img img {
-  border-radius: 40px 40px 40px 0;
-}
+  border-radius: 40px 40px 40px 0; }
 
 .header__form {
-  margin-top: 42px;
-}
+  margin-top: 42px; }
 
 .form {
   background: #FFFFFF;
   box-shadow: 0px 17px 42px rgba(0, 0, 0, 0.12);
   border-radius: 29px;
   height: 58px;
-  transition: box-shadow 0.2s ease-in;
-}
-.form--active {
-  box-shadow: 0px 17px 42px rgba(247, 132, 52, 0.27);
-}
+  transition: box-shadow 0.2s ease-in; }
+  .form--active {
+    box-shadow: 0px 17px 42px rgba(247, 132, 52, 0.27); }
 
 .form__label {
   position: relative;
@@ -130,26 +113,22 @@ ul, li {
   justify-content: space-between;
   padding-left: 72px;
   height: 100%;
-  align-items: center;
-}
-.form__label::before {
-  position: absolute;
-  top: 20px;
-  left: 28px;
-  content: "";
-  display: block;
-  width: 24px;
-  height: 19px;
-  background-image: url("./../img/icons/mail.svg");
-}
+  align-items: center; }
+  .form__label::before {
+    position: absolute;
+    top: 20px;
+    left: 28px;
+    content: "";
+    display: block;
+    width: 24px;
+    height: 19px;
+    background-image: url("./../img/icons/mail.svg"); }
 
 .form__input {
   flex-grow: 1;
-  margin-right: 10px;
-}
-.form__input::placeholder {
-  color: #bbb;
-}
+  margin-right: 10px; }
+  .form__input::placeholder {
+    color: #bbb; }
 
 .button {
   display: inline-block;
@@ -161,67 +140,103 @@ ul, li {
   line-height: 58px;
   font-weight: 700;
   color: #fff;
-  transition: background-color 0.2s ease-in;
-}
-.button:hover {
-  background-color: #ff6a00;
-}
+  transition: background-color 0.2s ease-in; }
+  .button:hover {
+    background-color: #ff6a00; }
 
 .clients {
   padding-top: 100px;
-  padding-bottom: 45px;
-}
+  padding-bottom: 45px; }
 
 .clients__row {
   display: flex;
   justify-content: space-between;
-  align-items: center;
-}
+  align-items: center; }
 
 .objects {
   padding-top: 45px;
-  padding-bottom: 80px;
-}
+  padding-bottom: 80px; }
 
 .objects__row {
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-end;
   align-items: center;
-}
+  overflow-x: hidden; }
 
 .objects__img {
   display: flex;
   justify-content: flex-end;
-  align-items: flex-start;
-}
+  align-items: flex-start; }
 
 .objects__text {
-  max-width: 540px;
+  max-width: 693px;
   padding-left: 180px;
-}
-.objects__text p + p {
-  margin-top: 20px;
-}
+  flex-shrink: 0;
+  padding-right: 152px; }
+  .objects__text p + p {
+    margin-top: 20px; }
 
 .objects__button {
-  margin-top: 40px;
-}
+  margin-top: 40px; }
 
 .tittle {
   font-size: 42px;
   font-weight: 700;
-  line-height: 1.476;
-}
+  line-height: 1.476; }
 
-.img__card + .img__card {
-  margin-left: 32px;
-}
+.img__card {
+  position: relative;
+  width: 385px; }
+  .img__card + .img__card {
+    margin-left: 32px; }
 
 .img-card__img {
-  border-radius: 20px 20px 0px 20px;
-}
-.img-card--rounder .img-card__img {
-  border-radius: 20px;
-}
+  border-radius: 20px 20px 0px 20px; }
+  .img-card--rounder .img-card__img {
+    border-radius: 20px; }
+
+.img-card--info {
+  position: absolute;
+  right: -46px;
+  bottom: 87px; }
+
+.card--info {
+  display: flex;
+  align-items: center;
+  padding: 30px;
+  background: #ffffff;
+  box-shadow: 4px 20px 42px -2px rgba(0, 0, 0, 0.12);
+  border-radius: 15px; }
+
+.card--info__icon {
+  margin-right: 20px; }
+
+.card--info__tittle {
+  font-weight: 700; }
+
+.cta {
+  padding-top: 70px;
+  padding-bottom: 70px; }
+
+.cta_block {
+  background-color: #58BEBF;
+  border: 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-right: 95px; }
+
+.cta__image {
+  margin-top: 60px;
+  padding-top: 25px;
+  padding-right: 25px;
+  background-color: white;
+  border-radius: 0 20px 0 0; }
+
+.cta_tittle {
+  margin-bottom: 15px; }
+
+.cta_tittle.tittle {
+  color: #fff; }
 
 /*# sourceMappingURL=main.css.map */
